--- a/js_playground/Simple Blackjack Game/index.css
+++ b/js_playground/Simple Blackjack Game/index.css
@@ -1,3 +1,4 @@
+/* shadril238 */
 body{
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: green;
